--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <div id="box">
         <h1>⬅⬅move me to the left</h1>
     </div>
+    <div class="card">
+        <div class="card__img">
+            <img src="http://placeimg.com/640/480/transport" alt="">
+        </div>
+        <div class="card__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias quaerat quia corporis illo praesentium, libero obcaecati! Veritatis voluptas excepturi consequatur unde, suscipit repellendus possimus.
+        </div>
+        <div class="card__footer">
+            ⬅move➡
+        </div>
+    </div>
     <script src="./hammer.min.js"></script>
     <script src="./script.js"></script>
 </body>
